--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@300;500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.red {
-    background-color: red;
-}
